--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
         <main>
             <div class="slider">
                 <div class="slider__slides">
-                    <div class="slider__slide"></div>
+                    <div class="slider__slide">
+                        <article class="profile">
+                            <div class="profile__side">
+                                <div class="profile__imgwrap">
+                                    <img class="profile__img" src="img/img.jpg" alt="Sahar Kabir - Frontend Development">
+                                </div>
+                            </div>
+                            <div class="profile__side">
+                                <h2 class="profile__name">Sahariar kabir</h2>
+                                <h3 class="profile_office">Frontend Deleveper</h3>
+                                <ul class="social">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                    </li>
+
+                                    <li class="social__item">
+                                        <a href="#" class="social__link" target="_blank"><i class="fab fa-twitter"></i></a>
+                                    </li>
+
+                                    <li class="social__item">
+                                        <a href="#" class="social__link" target="_blank"><i class="fab fa-google"></i></a>
+                                    </li>
+
+                                    <li class="social__item">
+                                        <a href="#" class="social__link" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                    </li>
+
+                                </ul>
+
+                                <div class="profile__text">
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium placeat quia laborum suscipit quas corporis ipsum ratione cumque ducimus quam pariatur, reprehenderit labore, quo hic aliquam ad veritatis sequi perspiciatis.</p>
+                                </div>
+                                <a href="#" class="profile__link">VIEV PROFILE</a>
+                            </div>
+                        </article>
+                    </div>
                 </div>
                 <a href="#" class="slider__arrow slider__arrow--left">
                     <svg class="inline-svg-icon" width="32px" height="32px">
@@ -50,6 +85,6 @@
     </symbol>
 </svg>
 
-
+<script src="https://kit.fontawesome.com/20ed8529b5.js" crossorigin="anonymous"></script>
 </body>
 </html>
