fixed first name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="profile__side">
-                                <h2 class="profile__name">Sahariar kabir</h2>
+                                <h2 class="profile__name">Sahariar Kabir</h2>
                                 <h3 class="profile_office">Frontend Deleveper</h3>
                                 <ul class="social">
                                     <li class="social__item">
